# parsec-tesseorg

./: .gitignore  CMakeLists.txt  NEWS  all_modules.sh  easy_build.sh
cmake_modules/: FindHWLOC.cmake  PaRSECConfig.cmake.in
dague/: dague.c  data.c  scheduling.c
dague/devices/cuda/: dev_cuda.c
dague/include/: dague.pc.in
data_dist/matrix/: grid_2Dcyclic.c  map_operator.c  matrix.c  matrix.h
dplasma/cmake_modules/: FindCOREBLAS.cmake
dplasma/examples/: dqr_driver.c
dplasma/include/: CMakeLists.txt  dplasma.h  dplasma_bcast.h  dplasma_z.h
dplasma/lib/: CMakeLists.txt  dplasma_bcast.c  dplasma_hqr.c  dplasmaaux.c  dplasmaaux.h  irregular_tiled_matrix_init.jdf  zgemm_NN.jdf  zgemm_NN_summa.jdf  zgemm_NT.jdf  zgemm_NT_summa.jdf  zgemm_TN.jdf  zgemm_TN_summa.jdf  zgemm_TT.jdf  zgemm_TT_summa.jdf  zgemm_bcast_NN.jdf  zgemm_benchmark.jdf  zgemm_summit_NN.jdf  zgemm_summit_NN_B.jdf  zgemm_summit_NN_C.jdf  zgemm_summit_wrapper.c  zgemm_wrapper.c  zgeqrf.jdf  zgetrf_nopiv.jdf  zpotrf_L.jdf  zpotrf_U.jdf  zsumma_NN.jdf  zsumma_NT.jdf  zsumma_TN.jdf  zsumma_TT.jdf  zsumma_wrapper.c
dplasma/testing/: CMakeLists.txt  Testings.cmake  benchmark_zgemm.c  common.c  common.h  testing_zgelqf_hqr.c  testing_zgemm.c  testing_zgemm_summit.c  testing_zgeqrf_hqr.c  testing_zpivgen.c  testing_zsumma.c
dplasma/tools/PrecisionGenerator/: subs.py
parsec/: CMakeLists.txt  arena.c  compound.c  data.c  data.h  data_distribution.c  data_internal.h  datarepo.c  datarepo.h  dictionary.c  hbbuffer.c  parsec.c  parsec_internal.h  parsec_mpi_funnelled.c  parsec_prof_grapher.c  parsec_remote_dep.c  parsec_remote_dep.h  profiling.c  profiling.h  profiling_otf2.c  recursive.h  remote_dep.c  remote_dep.h  remote_dep_mpi.c  runtime.h  scheduling.c  scheduling.h  termdet.c
parsec/class/: list.h  parsec_datacopy_future.c  parsec_future.c  parsec_hash_table.c  parsec_object.h
parsec/data_dist/: hash_datadist.c
parsec/data_dist/matrix/: CMakeLists.txt  grid_2Dcyclic.c  irregular_subtile.c  irregular_subtile.h  irregular_tiled_matrix.c  irregular_tiled_matrix.h  map_operator.c  matrix.c  sym_two_dim_rectangle_cyclic_band.c  two_dim_rectangle_cyclic_band.c  vector_two_dim_cyclic.c
parsec/devices/: device.c  device.h
parsec/devices/cuda/: dev_cuda.c  dev_cuda.h  tranfer.c  transfer.c
parsec/fortran/: CMakeLists.txt  parsec_profilef.F90
parsec/include/: parsec.h  parsec.pc.in
parsec/include/parsec/: data_distribution.h  execution_stream.h  parsec_description_structures.h  parsec_options.h.in
parsec/include/parsec/sys/: atomic.h
parsec/interfaces/: interface.c
parsec/interfaces/ptg/ptg-compiler/: jdf.c  jdf.h  jdf2c.c  parsec.y
parsec/interfaces/superscalar/: insert_function.c  insert_function.h  insert_function_internal.h  overlap_strategies.c  parsec_dtd_data_flush.c
parsec/mca/: mca_repository.c
parsec/mca/device/: device.c  device.h
parsec/mca/device/cuda/: device_cuda_module.c
parsec/mca/pins/iterators_checker/: pins_iterators_checker_module.c
parsec/mca/sched/: sched_local_queues_utils.h
parsec/mca/sched/lfq/: sched_lfq_module.c
parsec/mca/sched/rnd/: sched_rnd_module.c
parsec/mca/termdet/: termdet.h
parsec/mca/termdet/cda/: ValidateModule.CMake  termdet_cda.h  termdet_cda_component.c  termdet_cda_module.c
parsec/mca/termdet/edod/: ValidateModule.CMake  termdet_edod.h  termdet_edod_component.c  termdet_edod_module.c
parsec/mca/termdet/fourcounter/: termdet_fourcounter.h  termdet_fourcounter_component.c  termdet_fourcounter_module.c
parsec/mca/termdet/local/: termdet_local_component.c  termdet_local_module.c
parsec/mca/termdet/user_trigger/: termdet_user_trigger_module.c
parsec/utils/: zone_malloc.c  zone_malloc.h
summa/: Adist.mat  Bdist.mat  CMakeLists.txt  CMakeLists2.txt  Cdist.mat  tiledarray.case1
summa/cmake_modules/: FindDPLASMA.cmake  FindPARSEC.cmake  RulesPrecisions.cmake
summa/include/: #custom_tiled_matrix.c#  CMakeLists.txt  common.h  flops.h  irregular_subtile.h  irregular_tiled_matrix.h  parsec-summa.pc.in  summa_z.h
summa/lib/: dplasma.h  dplasma_qr_param.h  dplasmaaux.h  tiled_zplrnt_wrapper.c  zgemm_NN.jdf  zgemm_NT.jdf  zgemm_TN.jdf  zgemm_TT.jdf  zgemm_bcast_NN.jdf  zgemm_wrapper.c  zsumma_NN.jdf  zsumma_NT.jdf  zsumma_TN.jdf  zsumma_TT.jdf  zsumma_wrapper.c
summa/src/: irregular_subtile.c  irregular_tiled_matrix.c
summa/testing/: RulesTestings.cmake  testing_zgemm.c  testing_zsumma.c
summa/tools/precision_generator/: subs.py
tests/: CMakeLists.txt  Testings.cmake  multichain.jdf  vector.c
tests/branching/: branching_data.c
tests/choice/: choice.jdf  choice_data.c
tests/controlgather/: ctlgat_data.c
tests/haar-tree-project/: CMakeLists.txt  ir_test.c  main.c  osu_allreduce.c  osu_coll.c  osu_coll.h  project.jdf  rand_walk.c  random_walk.jdf  tree_dist.c  walk.jdf
tests/interfaces/ptg/: CMakeLists.txt
tests/interfaces/ptg/compiler_checks/: CMakeLists.txt
tests/interfaces/ptg/cuda/: CMakeLists.txt  nvlink.jdf  nvlink_wrapper.c  stress.jdf  stress_wrapper.c
tests/interfaces/superscalar/: CMakeLists.txt  dtd_test_allreduce.c  dtd_test_broadcast.c  dtd_test_data_flush.c  dtd_test_explicit_task_creation.c  dtd_test_hierarchy.c  dtd_test_insert_task_interface.c  dtd_test_pingpong.c  dtd_test_reduce.c  dtd_test_task_placement.c  dtd_test_template_counter.c  dtd_test_untie.c  dtd_test_war.c
tests/pingpong/: bandwidth.jdf  rtt_data.c
tests/scheduling/: schedmicro_data.c
tests/stencil/: stencil_internal.c  stencil_internal.h
tests/taskpool_wait/: dtd_tp.c  dtd_tp.h  main.c  ptg_tp.jdf
tests/unit/: CMakeLists.txt  Testings.cmake
tools/: dotmerger.pl
tools/dague-compiler/: jdf2c.c
tools/precision_generator/: subs.py
tools/profiling/python/examples/: h5totrace.py
